--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -8,5 +8,14 @@ spring:
     active: dev
 
 ---
+## 非对称加解密,只能放在bootstrap.yml中
+encrypt:
+  keyStore:
+    location: classpath:/config-server.jks
+    password: 111111  # storepass
+    alias: config-server    # alias
+    secret: 222222   # keypass
+
+---
 encrypt:
   failOnError: false
