--- a/src/main/resources/application-prod-server2.yml
+++ b/src/main/resources/application-prod-server2.yml
@@ -1,18 +1,12 @@
 server:
   port: 8889
 
----
-security:
-  user:
-    name: mutou
-    password: 701712
 
 ---
 #改变url访问路径
-management:
-  context-path: /admin
+#management:
+#  context-path: /admin
 
----
 eureka:
   client:
     service-url:
@@ -22,8 +16,17 @@ eureka:
     health-check-url-path: /admin/health #查看健康运行状态
     status-page-url-path: /admin/info
 
----
 spring:
+  rabbitmq:
+      host: 119.23.78.160
+      port: 5672
+      username: zmt
+      password: 701712
+      virtual-host: /
+  security:
+    user:
+      name: mutou
+      password: 701712
   cloud:
     config:
       server:
@@ -32,13 +35,3 @@ spring:
           search-paths: spcselling-config/spcselling-config-repo
 #          username:
 #          password:
-
----
-# spring-cloud-bus刷新配置
-spring:
-  rabbitmq:
-    host: 119.23.78.160
-    port: 5672
-    username: zmt
-    password: 701712
-    virtual-host: /
